# note-app-one-hour-a-day

./: Cargo.toml
crates/note-app/: Cargo.toml
crates/routes/: Cargo.toml
crates/routes-macro/: Cargo.toml
crates/routes-macro/src/: lib.rs
crates/routes/examples/: simple.rs
crates/routes/src/: endpoint.rs  lib.rs  serve.rs
crates/sqlxorm/: Cargo.toml
crates/sqlxorm-macro/: Cargo.toml
crates/sqlxorm/examples/: simple.rs
crates/sqlxorm/src/generator/: accessor.rs  arg_meta.rs  column_def.rs  entity.rs  field.rs  main.rs  query_builder.rs  registry.rs  save.rs
src/: main.rs
