[package]
name = "routes"
version = "0.1.0"
authors = ["heymind <heymind@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
routes-macro = { path = "../routes-macro"}
tokio = { version = "1", features = ["full"] }
hyper = {version = "0.14", features = ["full"] }
futures = "0.3"
regex = "1"
serde_qs = "0.8"
serde_json = "1.0"
serde = "*"

