[package]
name = "sqlxorm"
version = "0.1.0"
authors = ["heymind <heymind@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
anyhow = "1"
http = "*"
pretty_env_logger = "0.4"
log = "0.4"
parking_lot = "0.11"
futures = "0.3"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "1.0", features  = ["full", "extra-traits"]}
indexmap = "1.6"
[[bin]]
name = "gen"
path = "src/generator/main.rs"